# lidl-case-study

./: README.md  pyproject.toml
notebooks/: clustering.ipynb  eda.ipynb  regression.ipynb
notebooks/utils/: visualize.py
